--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
-  "dependencies": {},
   "devDependencies": {
-    "vitepress": "^1.0.0-rc.42"
+    "@types/node": "^20.11.17",
+    "feed": "^4.2.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "unplugin-auto-import": "^0.17.5",
+    "vite-plugin-vuetify": "^2.0.1",
+    "vitepress": "^1.0.0-rc.42",
+    "vuetify": "^3.5.4"
+  },
+  "scripts": {
+    "dev": "vitepress dev posts --port 8484",
+    "posts:build": "vitepress build posts",
+    "preview": "vitepress preview posts --port 8484"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.4.47"
   }
 }
