--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/node": "^20.11.17",
     "feed": "^4.2.2",
     "fs": "^0.0.1-security",
+    "jekyll": "^3.0.0-beta1",
     "path": "^0.12.7",
     "unplugin-auto-import": "^0.17.5",
     "vite-plugin-vuetify": "^2.0.1",
