--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "scripts": {
     "dev": "vitepress dev blog --port 8484",
     "build": "vitepress build blog",
-    "preview": "vitepress preview blog --port 8484"
+    "preview": "vitepress preview blog --port 8484",
+    "version": "node ./version.js",
+    "v": "node ./version.js"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47"
