--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "date-and-time": "^3.1.1",
     "feed": "^4.2.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
