--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "devDependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.4.47",
     "@types/node": "^20.11.17",
     "feed": "^4.2.2",
     "fs": "^0.0.1-security",
