--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@jamescoyle/vue-icon": "^0.1.2",
+    "@material/list": "^14.0.0",
     "@mdi/js": "^7.4.47",
     "@types/node": "^20.11.17",
     "feed": "^4.2.2",
