--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "path": "^0.12.7",
+    "remove-markdown": "^0.5.0",
     "unplugin-auto-import": "^0.17.5",
     "vite-plugin-vuetify": "^2.0.1",
     "vitepress": "^1.0.0-rc.42",
