--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "@material/list": "^14.0.0",
     "@mdi/js": "^7.4.47",
     "@types/node": "^20.11.17",
+    "@vitejs/plugin-vue": "^5.0.4",
     "feed": "^4.2.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "path": "^0.12.7",
+    "react": "^18.2.0",
+    "react-github-calendar": "^4.1.2",
     "remove-markdown": "^0.5.0",
     "unplugin-auto-import": "^0.17.5",
     "vite-plugin-vuetify": "^2.0.1",
