--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "archive": "node ./collect-archive.mjs"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47"
+    "@mdi/font": "^7.4.47",
+    "date-fns": "^3.6.0"
   },
   "version": "3.2.419"
 }
