--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -41,6 +41,8 @@ jobs:
         run: yarn run version
       - name: Build
         run: yarn run build
+        env:
+          VITE_GITHUB_TOKEN: GITHUB_TOKEN
       - name: Setup Pages
         uses: actions/configure-pages@main
       - name: Upload artifact
@@ -48,8 +50,6 @@ jobs:
         with:
           # Upload vite artifacts to be deployed
           path: './blog/.vitepress/dist'
-        env:
-          VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@main
