--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -41,18 +41,12 @@ jobs:
         run: yarn run version
       - name: Build
         run: yarn run build
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v2.0
-        with: 
-          envkey_VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
-          directory: './blog/.vitepress/dist'
-          file_name: .env
       - name: Setup Pages
         uses: actions/configure-pages@main
+        env:
+          VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
-        env:
-          VITE_GITHUB_TOKEN: GITHUB_TOKEN
         with:
           # Upload vite artifacts to be deployed
           path: './blog/.vitepress/dist'
