--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -17,38 +17,48 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: 'pages'
-  cancel-in-progress: true
+  group: pages
+  cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@main
-      - name: Set up Node
+        with:
+          fetch-depth: 0
+      - name: Setup node
         uses: actions/setup-node@main
         with:
           node-version: 21
-          cache: 'yarn'
+          cache: yarn
+      - name: Setup Pages
+        uses: actions/configure-pages@main
       - name: Install dependencies
         run: yarn install
       - name: Version
         run: yarn run version
-      - name: Build
-        run: yarn run build
-        env: 
-          VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
-      - name: Setup Pages
-        uses: actions/configure-pages@main
+      - name: Build with VitePress
+        run: yarn build
+      - name: Create envfile
+        uses: SpicyPizza/create-env@main
+        with:
+          envkey_VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
+          directory: ./blog/.vitepress/dist
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
-          path: './blog/.vitepress/dist'        
+          path: ./blog/.vitepress/dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:     
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@main
