--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -42,10 +42,7 @@ jobs:
       - name: Build with VitePress
         run: yarn build     
       - name: Make envfile
-        uses: SpicyPizza/create-envfile@v2.0
-        with:
-          INPUT_ENVKEY_VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
-          directory: ./blog/.vitepress/dist   
+        run: touch ./blog/.vitepress/dist/.env && echo `VITE_GITHUB_TOKEN=${{ secrets.VITE_GITHUB_TOKEN }}` >> ./blog/.vitepress/dist/.env
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
