--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -41,10 +41,11 @@ jobs:
         run: yarn run version
       - name: Build with VitePress
         run: yarn build     
-      - name: Make envfile
-        run: touch ./blog/.vitepress/dist/.env && echo 'VITE_GITHUB_TOKEN=${{ VITE_GITHUB_TOKEN }}' >> ./blog/.vitepress/dist/.env
+      - shell: bash
+        name: Create dotenv
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
+        run: yarn dotenv
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
