--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -41,11 +41,10 @@ jobs:
         run: yarn run version
       - name: Build with VitePress
         run: yarn build     
-      - shell: bash
-        name: Create dotenv
+      - name: Make envfile
+        run: touch ./blog/.vitepress/dist/.env && echo 'VITE_GITHUB_TOKEN=${{ VITE_GITHUB_TOKEN }}' >> ./blog/.vitepress/dist/.env
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
-        run: yarn dotenv
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
