--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -22,6 +22,7 @@ concurrency:
 
 jobs:  
   build:
+    environment: github-pages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -41,8 +42,8 @@ jobs:
         run: yarn run version
       - name: Build with VitePress
         run: yarn build     
-      - name: Make envfile
-        run: touch ./blog/.vitepress/dist/.env && echo 'VITE_GITHUB_TOKEN=${{ VITE_GITHUB_TOKEN }}' >> ./blog/.vitepress/dist/.env
+      - name: Create dotenv
+        run: touch ./blog/.vitepress/dist/.env && echo 'VITE_GITHUB_TOKEN=$VITE_GITHUB_TOKEN' >> ./blog/.vitepress/dist/.env
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
       - name: Upload artifact
