--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -49,9 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
-          path: |
-            ./blog/.vitepress/dist
-            ./blog/.vitepress/dist/.env
+          path: ./blog/.vitepress/dist 
   deploy:
     environment:
       name: github-pages
