--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -42,14 +42,18 @@ jobs:
         run: yarn run version
       - name: Build with VitePress
         run: yarn build     
-      - name: Create dotenv
-        run: echo 'VITE_GITHUB_TOKEN=${{ secrets.VITE_GITHUB_TOKEN }}' >> ./blog/.vitepress/dist/.env
+      - name: Create dotenv #encrypt this -> .env.production
+        run: echo 'VITE_GITHUB_TOKEN=${{ secrets.VITE_GITHUB_TOKEN }}' >> ./blog/.vitepress/dist/.env.production
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
           path: ./blog/.vitepress/dist 
+      - name: Upload dotenv
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./blog/.vitepress/dist/.env.production
   deploy:
     environment:
       name: github-pages
