--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "version": "node ./version.mjs",
     "v": "node ./version.mjs",
     "archive": "node ./collect-archive.mjs",
-    "post": "node ./create-post.mjs "
+    "post": "node ./create-post.mjs ",
+    "pretty": "prettier --write ."
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
