Revert "add prettier"
This reverts commit 00e8818366cd1698ee8251932e21059ad98952af.

--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "version": "node ./version.mjs",
     "v": "node ./version.mjs",
     "archive": "node ./collect-archive.mjs",
-    "post": "node ./create-post.mjs ",
-    "pretty": "prettier --write ."
+    "post": "node ./create-post.mjs "
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
