--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -42,18 +42,17 @@ jobs:
         run: yarn run version
       - name: Build with VitePress
         run: yarn build
-      - name: Create dotenv #encrypt this -> .env.production
-        run: echo 'VITE_GITHUB_TOKEN=${{ secrets.VITE_GITHUB_TOKEN }}' >> ./blog/.vitepress/dist/.env.production
+      - name: Create dotenv
+        run: |
+          touch .env
+          echo 'VITE_GITHUB_TOKEN=${{ secrets.VITE_GITHUB_TOKEN }}' >> .env
+          cat .env
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
           path: ./blog/.vitepress/dist
-      - name: Upload dotenv
-        uses: actions/upload-artifact@v4
-        with:
-          path: ./blog/.vitepress/dist/.env.production
   deploy:
     environment:
       name: github-pages
