--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -44,6 +44,15 @@ jobs:
         run: yarn build        
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
+      - name: generate SVG
+        uses: cyprieng/github-breakout@v1.0.0
+        with:
+          github_username: ${{ github.repository_owner }}
+      - name: Move generated SVGs
+        run: |
+          mkdir -p images
+          mv output/light.svg ./blog/.vitepress/dist/images/breakout-light.svg
+          mv output/dark.svg ./blog/.vitepress/dist/images/breakout-dark.svg
       - name: Upload artifact
         uses: actions/upload-pages-artifact@main
         with:
